--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 
 div {
   text-align: center;
+  
+  font-family: "Quicksand", sans-serif;
 }
 
 
@@ -41,7 +43,7 @@ h2
 h3 {
   text-align: center;
 }
-
+h4 {height:30px;}
 a:hover,
 a:active {
   background-color: rgb(230, 203, 173);
